datasdir = $(datadir)/splash/templates/
datas_DATA = \
	single_dome.png single_dome.json \
	dual_dome.png dual_dome.json \
	two_scenes_four_cameras.png two_scenes_four_cameras.json \
	four_plane.png four_plane.json \
	single_plane.png single_plane.json

EXTRA_DIST = \
	single_dome.png single_dome.json \
	dual_dome.png dual_dome.json \
	two_scenes_four_cameras.png two_scenes_four_cameras.json \
	four_plane.png four_plane.json \
	single_plane.png single_plane.json
